--- a/app.json
+++ b/app.json
@@ -3,20 +3,9 @@
     "name": "Myntra-clone",
     "slug": "Myntra-clone",
     "version": "1.0.0",
-    "android": {
-      "package": "com.galaxies.firebase",
-      "googleServicesFile": "./google-services.json"
-    },
-    "plugins": [
-      [
-        "expo-build-properties"
-      ],
-      "@react-native-firebase/app",
-      "@react-native-firebase/auth"
-    ],
-    "ios": {
-      "bundleIdentifier": "com.galaxies.firebase",
-      "googleServicesFile": "./GoogleService-Info.plist.json"
-    }
+    "android": {},
+    "ios": {}
   }
 }
+
+
