--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@react-native-firebase/auth": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@shopify/flash-list": "^1.7.6",
     "@tanstack/react-query": "^5.69.0",
     "expo": "~52.0.38",
     "expo-build-properties": "~0.13.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.5.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-masonry-list": "^2.16.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
